k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: critr
  labels:
    app.kubernetes.io/name: critr
